[package]
name = "datschain"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
bincode = "2.0.1"
ed25519-dalek = "2.1.1"
futures = "0.3.31"
keccak-asm = "0.1.4"
rand = "0.9.1"
rs_merkle = { version = "1.5.0", features = ["keccak256"] }
rusty-leveldb = "3.0.2"
tokio = { version = "1.44.2", features = ["full"] }
