[package]
name = "datschain"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
base64 = "0.22.1"
ed25519-dalek = "2.1.1"
futures = "0.3.31"
hashlink = "0.10.0"
keccak-asm = "0.1.4"
rand = "0.9.1"
rs_merkle = { version = "1.5.0", features = ["keccak256"] }
rusty-leveldb = "3.0.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
warp = "0.3.7"
