[package]
name = "datschain"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
base64 = "0.22.1"
bincode = "2.0.1"
bytes = { version = "1.10.1", features = ["serde"] }
ed25519-dalek = "2.1.1"
futures = "0.3.31"
hashlink = "0.10.0"
hex = "0.4.3"
keccak-asm = "0.1.4"
rand = "0.9.1"
rs_merkle = { version = "1.5.0", features = ["keccak256"] }
rusty-leveldb = "3.0.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = "0.7.14"
warp = "0.3.7"
